crates/tm-sparql/tests/snapshots/lower_exprs__functions.snap
---
source: crates/tm-sparql/tests/lower_exprs.rs
expression: "ir(\"SELECT (SUBSTR(?n, 2) AS ?a) (CONCAT(?n, \\\"x\\\") AS ?b) (xsd:integer(?n) AS ?c) (YEAR(?t) AS ?d) (TZ(?t) AS ?e) (isBlank(?p) AS ?f) WHERE { ?p v:n ?n . ?p v:t ?t }\")"
---
; Homomorphism Unbound SetOfTriples
(project [?a ?b ?c ?d ?e ?f]
  (extend ?f (isBlank ?p)
    (extend ?e (TZ ?t)
      (extend ?d (YEAR ?t)
        (extend ?c (xsd:integer ?n)
          (extend ?b (CONCAT ?n "x")
            (extend ?a (SUBSTR ?n 2)
              (join
                (triple ?p <urn:tiramemsu:v:n> ?n :view now)
                (triple ?p <urn:tiramemsu:v:t> ?t :view now)))))))))
